--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,22 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-node_modules/
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
-#block this
-# production
-/frontend/node_modules/
 
-/frontend/build
+# production
+/build
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
